Fixing dark mode

--- a/themes/affiche/assets/css/style.css
+++ b/themes/affiche/assets/css/style.css
@@ -1788,13 +1788,27 @@ h2 {
 }
 
 @media (prefers-color-scheme: dark) {
+  .dark\:border-b-2 {
+    border-bottom-width: 2px;
+  }
+
   .dark\:border-zinc-700\/40 {
     border-color: rgb(63 63 70 / 0.4);
+  }
+
+  .dark\:border-zinc-400 {
+    --tw-border-opacity: 1;
+    border-color: rgb(161 161 170 / var(--tw-border-opacity));
   }
 
   .dark\:bg-zinc-800 {
     --tw-bg-opacity: 1;
     background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-black {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   }
 
   .dark\:text-zinc-100 {
@@ -1810,6 +1824,11 @@ h2 {
   .dark\:text-zinc-400 {
     --tw-text-opacity: 1;
     color: rgb(161 161 170 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-zinc-500 {
+    --tw-text-opacity: 1;
+    color: rgb(113 113 122 / var(--tw-text-opacity));
   }
 
   .dark\:hover\:text-teal-500:hover {
